fixing spacing in contact section

--- a/css/style.css
+++ b/css/style.css
@@ -397,7 +397,7 @@ h3 {
     width: 55%;
   }
   .contact-h3 {
-    font-size: 1em;
+    font-size: 0.9em;
   }
   #portfolio-h4-text {
     font-size: 1.5em;
